--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 Flask>=0.10.1
 mysql-connector-python-rf>=2.2.2
 enum34>=1.1.2
-jimit>=3.1
+#jimit>=3.1
 requests>=2.9.1
 PyJWT>=1.4.1
 Flask-Session>=0.3.0
