--- a/awp.conf
+++ b/awp.conf
@@ -10,5 +10,5 @@
   "redis_port": 6379,
   "redis_password": "",
   "redis_dbid": 0,
-  "log_file_path": "/var/log/awp.log"
+  "log_file_path": "./log/awp.log"
 }
